# rare-species-map

./: .gitignore  AGENTS.md  README.md
.github/workflows/: deploy-worker.yml  deploy.yml
pipeline/: pyproject.toml
pipeline/rare_species_map/: __init__.py  cell_scores.py  cli.py  config.py  duckdb_utils.py  filtering.py  gam_scorer.py  occupancy.py  pipeline.py  schemas.py  tiles.py
pipeline/scripts/: 01_filter_to_parquet.py  02_compute_species_occupancy.py  03_compute_cell_scores.py  04_generate_pmtiles.py  run_pipeline.py
pmtiles-proxy/: package-lock.json  package.json  worker-configuration.d.ts  wrangler.jsonc
pmtiles-proxy/.wrangler/state/v3/cache/miniflare-CacheObject/: metadata.sqlite-shm  metadata.sqlite-wal
pmtiles-proxy/src/: index.ts
web/: README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
web/scripts/: copy-tiles.mjs
web/src/: app.html
web/src/routes/: +layout.svelte  +page.svelte
web/src/styles/: app.css
web/static/tiles/: cell_scores_summary3.json  cell_scores_summary4.json  cell_scores_summary5.json  cell_scores_summary6.json  cell_scores_summary7.json  rare_species_cells3.pmtiles  rare_species_cells4.pmtiles  rare_species_cells5.pmtiles  rare_species_cells6.pmtiles
web/static/tiles/italy_test/: cell_scores_summary3.json  cell_scores_summary4.json  cell_scores_summary5.json  cell_scores_summary6.json  cell_scores_summary7.json  rare_species_cells3.pmtiles  rare_species_cells4.pmtiles  rare_species_cells5.pmtiles  rare_species_cells6.pmtiles
