[project]
name = "rare-species-map"
version = "0.1.0"
description = "Species rarity tiles generation"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.5.2",
    "freestiler>=0.1.6",
    "h3>=4.4.2",
    "matplotlib>=3.10.7",
    "numpy>=2.4.4",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "scipy>=1.17.1",
]
